# cv_code_2025

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakeLists_2.txt  CMakePresets.json  README.md  compile_commands.json  vcpkg-configuration.json  vcpkg.json  xmake.lua
env_guides/: cmake_guide.md  xmake_guide.md
src/: compiler_check.cpp  cuda_operators.cu  cuda_operators.hpp  final_project.cpp  my_cmd_parser.hpp  my_logger.hpp  test_opencv.cpp
src/configs/: default_config.yaml
toolchains/: clang_libcxx.lua
triplets/: x64-linux-llvm.cmake
